# Robust-AI-Generated-Text-Detection

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml  requirements-research.txt  requirements.txt
.github/workflows/: ci.yml
app/: main.py
artifacts/: model_card.md  tfidf_logreg_model.joblib  tfidf_metrics.csv  tfidf_vectorizer.joblib
config/: config.yaml
reports/: README.md  benchmark_results.csv
src/: benchmark.py  config.py  data.py  data_preprocessing.py  evaluate.py  external_validation.py  features.py  logging_utils.py  pipeline.py  train_tfidf.py
src/models/: bilstm.py  qwen_features.py  tfidf.py  transformer.py
tests/: test_benchmark.py  test_config.py  test_data.py  test_models.py
