[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-vs-human-text-detection"
version = "1.0.0"
description = "Detect AI-generated vs human-written text. Production TF-IDF service + multi-model research benchmark."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
research = ["tensorflow>=2.15", "torch>=2.2", "transformers>=4.40", "datasets>=2.18", "accelerate>=0.29", "sentencepiece>=0.2"]
viz = ["matplotlib>=3.8", "seaborn>=0.13", "wordcloud>=1.9"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
train-detector = "src.pipeline:main"
run-benchmark = "src.benchmark:main"

[tool.setuptools.packages.find]
include = ["src*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
